# nesium

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_zh.md  TODO.md  deny.toml  input_recording.txt  nes_mapper_review_and_todo.md
apps/nesium-egui/: .gitignore  Cargo.toml  build.rs
apps/nesium-egui/src/: app.rs  emulator_thread.rs  main.rs
apps/nesium-egui/src/app/: controller.rs  dialogs.rs  fonts.rs  main_view.rs  menu.rs  viewports.rs
apps/nesium-egui/tool/: subset_font.py
apps/nesium-egui/windows/: build_installer.ps1  installer.iss
apps/nesium-slint/: Cargo.toml  build.rs
apps/nesium-slint/src/: app.rs  main.rs
apps/nesium-slint/src/app/: debug.rs  input.rs  state.rs  windows.rs
apps/nesium-slint/src/runtime/: mod.rs  session.rs
apps/nesium-slint/src/video/: mod.rs  renderer.rs
apps/nesium-slint/ui/: main-window.slint  shared.slint
apps/nesium-slint/ui/windows/: about.slint  audio.slint  debugger.slint  input.slint  palette.slint  tools.slint
apps/nesium-tui/: Cargo.toml
apps/nesium-tui/src/: app.rs  args.rs  input.rs  main.rs  ui.rs
apps/nesium-tui/src/ui/: widget.rs
crates/libretro-bridge/: Cargo.toml  README.md  build.rs
crates/libretro-bridge/src/: core.rs  lib.rs  runtime.rs  state.rs  tests.rs
crates/nesium-blip/: Cargo.toml  build.rs
crates/nesium-blip/csrc/: license.md
crates/nesium-blip/src/: c_impl.rs  lib.rs  rust_impl.rs  tests.rs
crates/nesium-blip/tests/: compat.rs
crates/nesium-core/: Cargo.toml  build.rs
crates/nesium-core/examples/: sprite0_probe.rs
crates/nesium-core/src/: apu.rs  audio.rs  bus.rs  cartridge.rs  context.rs  controller.rs  cpu.rs  error.rs  interceptor.rs  lib.rs  mem_block.rs  memory.rs  nmi_trace.rs  ppu.rs  ram.rs  reset_kind.rs  rng.rs  state.rs
crates/nesium-core/src/apu/: dmc.rs  envelope.rs  expansion.rs  frame_counter.rs  length_counter.rs  noise.rs  pulse.rs  tables.rs  triangle.rs
crates/nesium-core/src/audio/: bus.rs  channel.rs  filters.rs  mixer.rs  settings.rs
crates/nesium-core/src/bus/: cpu.rs  mock.rs  nes.rs  open_bus.rs  real.rs  savestate.rs
crates/nesium-core/src/cartridge/: a12_watcher.rs  axrom.rs  cnrom.rs  db.rs  header.rs  mapper.rs  nrom.rs  uxrom.rs
crates/nesium-core/src/config/: region.rs
crates/nesium-core/src/cpu/: addressing.rs  cycle.rs  instruction.rs  irq.rs  lookup.rs  micro_op.rs  mnemonic.rs  phase.rs  status.rs  timing.rs
crates/nesium-core/src/interceptor/: capture_point.rs  log_interceptor.rs  palette_interceptor.rs  sprite_interceptor.rs  tile_viewer_interceptor.rs  tilemap_capture_interceptor.rs  tilemap_interceptor.rs
crates/nesium-core/src/ppu/: background_pipeline.rs  buffer.rs  nmi_debug_state.rs  open_bus.rs  palette.rs  pattern_bus.rs  pending_vram_increment.rs  ppu_bus.rs  ppu_model.rs  registers.rs  savestate.rs  sprite.rs  sprite0_hit_debug.rs  sprite_pipeline.rs  sprite_state.rs
crates/nesium-core/src/state/: cpu.rs  nes.rs  ppu.rs
crates/nesium-core/tests/: apu_trace_compare.rs  audio_frame_flush_regression.rs  audio_probe.rs  debug_branch_timing.rs  debug_frame.rs  frame_rgb_compare.rs  nmi_trace_compare.rs  rom_suites.rs  video_probe.rs
crates/nesium-core/tests/common/: mod.rs
crates/nesium-egui/: Cargo.toml  README.md  build.rs
crates/nesium-egui/src/: app.rs  main.rs  trace.rs
crates/nesium-egui/src/app/: controller.rs  dialogs.rs  fonts.rs  gamepad.rs  main_view.rs  menu.rs  viewports.rs
crates/nesium-egui/src/audio/: mod.rs
crates/nesium-flutter/: Cargo.toml
crates/nesium-flutter/src/: android.rs  apple.rs  aux_texture.rs  event_worker.rs  frb_generated.rs  lib.rs  linux.rs  macos.rs  senders.rs  shader_utils.rs  windows.rs
crates/nesium-flutter/src/android/: ahb.rs  chain.rs  gles.rs  passthrough.rs  renderer.rs  session.rs
crates/nesium-flutter/src/api/: emulation.rs  events.rs  gamepad.rs  history.rs  input.rs  load_rom.rs  mod.rs  net_utils.rs  netplay.rs  palette.rs  pause.rs  server.rs  simple.rs  video.rs
crates/nesium-flutter/src/apple/: chain.rs  passthrough.rs  session.rs
crates/nesium-flutter/src/senders/: chr.rs  debug.rs  emulation_status.rs  history.rs  palette.rs  replay.rs  runtime.rs  shader.rs  sprite.rs  tile.rs  tilemap.rs
crates/nesium-flutter/src/windows/: chain.rs  passthrough.rs  session.rs  utils.rs
crates/nesium-icon/: Cargo.toml
crates/nesium-icon/src/: background.rs  controller.rs  dimensions.rs  lib.rs  main.rs  ring.rs  save.rs
crates/nesium-netd/: Cargo.toml
crates/nesium-netd/src/: lib.rs  main.rs  net.rs  proto_dispatch.rs  room.rs  session.rs
crates/nesium-netd/src/net/: framing.rs  inbound.rs  outbound.rs  quic.rs  quic_config.rs  rate_limit.rs  stream_adapter.rs  tcp.rs
crates/nesium-netd/src/proto_dispatch/: error.rs  handlers.rs  registry.rs
crates/nesium-netd/src/room/: broadcast.rs  state.rs
crates/nesium-netd/tests/: integration_idle_timeout.rs  integration_p2p_signaling.rs  integration_rate_limit.rs  integration_rom_sync.rs  integration_smoke.rs  integration_websocket.rs
crates/nesium-netplay/: Cargo.toml
crates/nesium-netplay/src/: config.rs  error.rs  handler.rs  input_provider.rs  lib.rs  session.rs  tcp_client.rs
crates/nesium-netplay/src/sync/: lockstep.rs  mod.rs  rollback.rs  snapshot.rs
crates/nesium-netplay/tests/: integration_join_rejoin.rs  integration_rom_sync.rs  integration_sync_play.rs
crates/nesium-netproto/: Cargo.toml
crates/nesium-netproto/src/: channel.rs  codec.rs  codec_tcp.rs  codec_udp.rs  constants.rs  error.rs  header.rs  lib.rs  limits.rs  messages.rs  msg_id.rs  packet.rs
crates/nesium-netproto/src/messages/: input.rs  resync.rs  session.rs  sync.rs
crates/nesium-runtime/: Cargo.toml
crates/nesium-runtime/src/: audio.rs  lib.rs  runtime.rs
crates/nesium-runtime/src/runtime/: control.rs  debug.rs  debug_interceptor.rs  (+7 more)
crates/nesium-support/: Cargo.toml  build.rs
crates/nesium-support/src/: error.rs  gamepad.rs  lib.rs  rewind.rs
crates/nesium-support/tests/: hqx.rs  hqx_equiv.rs  ntsc.rs  sai.rs  sai_equiv.rs
crates/nesium-wasm/: Cargo.toml
crates/nesium-wasm/src/: lib.rs
(+582 files in other folders)
