[workspace]
resolver = "3"
members = [
  "apps/nesium-egui",
  "crates/nesium-core",
  "crates/nesium-esp32",
  "crates/libretro-bridge",
  "crates/nesium-libretro",
  "crates/nesium-flutter",
  "crates/nesium-blip",
  "crates/nesium-icon",
  "crates/nesium-runtime",
  "crates/nesium-wasm",
]
default-members = [
  "apps/nesium-egui",
  "crates/nesium-core",
  "crates/libretro-bridge",
  "crates/nesium-libretro",
  "crates/nesium-flutter",
  "crates/nesium-blip",
  "crates/nesium-icon",
  "crates/nesium-runtime",
]

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
panic = "abort"
debug = false

[profile.release-dist]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
libretro-bridge = { path = "crates/libretro-bridge" }
nesium-blip = { path = "crates/nesium-blip" }
nesium-core = { path = "crates/nesium-core" }
nesium-icon = { path = "crates/nesium-icon" }
nesium-runtime = { path = "crates/nesium-runtime" }

bitflags = "2.10.0"
esp-idf-sys = "0.36"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
ctor = "0.6.3"
dyn-clone = "1.0.20"
eframe = "0.33.3"
flutter_rust_bridge = "=2.11.1"
gilrs = "0.11"
once_cell = "1.19"
bindgen = "0.72"
ureq = "2.9"
bincode = "2.0.1"
anyhow = "1.0"
sdl2 = "0.35"
egui_glow = "0.33.2"
glow = "0.13"
rfd = "0.16"
fontdb = "0.23"
ttf-parser = "0.25"
cpal = "0.16.0"
ringbuf = "0.4.8"
base64 = "0.22"
quick-xml = "0.38"
sha1 = "0.10"
skia-safe = "0.91"
wgpu = "27.0.1"
ico = "0.5"
winres = "0.1"
png = "0.18"
cc = "1"
proptest = "1"
clap = "4.5.53"
