[workspace]
resolver = "3"
members = [
  "apps/nesium-egui",
  "crates/nesium-core",
  "crates/nesium-esp32",
  "crates/libretro-bridge",
  "crates/nesium-libretro",
  "crates/nesium-flutter",
  "crates/nesium-blip",
  "crates/nesium-icon",
  "crates/nesium-runtime",
  "crates/nesium-wasm",
  "crates/nesium-netplay",
  "crates/nesium-netd",
  "crates/nesium-netproto",
]
default-members = [
  "apps/nesium-egui",
  "crates/nesium-core",
  "crates/libretro-bridge",
  "crates/nesium-libretro",
  "crates/nesium-flutter",
  "crates/nesium-blip",
  "crates/nesium-icon",
  "crates/nesium-runtime",
  "crates/nesium-netplay",
  "crates/nesium-netd",
  "crates/nesium-netproto",
]

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
panic = "abort"
debug = false

[profile.release-dist]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
libretro-bridge = { path = "crates/libretro-bridge" }
nesium-blip = { path = "crates/nesium-blip" }
nesium-core = { path = "crates/nesium-core" }
nesium-icon = { path = "crates/nesium-icon" }
nesium-runtime = { path = "crates/nesium-runtime" }
nesium-netproto = { path = "crates/nesium-netproto" }

bitflags = "2.10.0"
esp-idf-sys = "0.36.1"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
ctor = "0.6.3"
dyn-clone = "1.0.20"
eframe = "0.33.3"
flutter_rust_bridge = "=2.11.1"
gilrs = "0.11.0"
once_cell = "1.19"
bindgen = "0.72"
ureq = "2.9"
serde = "1.0.228"
postcard = "1.1.3"
anyhow = "1.0.100"
rfd = "0.16.0"
fontdb = "0.23.0"
ttf-parser = "0.25"
cpal = "0.17.0"
ringbuf = "0.4.8"
base64 = "0.22"
quick-xml = "0.38.4"
sha1 = "0.10.6"
skia-safe = "0.91.1"
ico = "0.5.0"
winres = "0.1.12"
png = "0.18"
cc = "1"
proptest = "1.9.0"
clap = "4.5.53"
tokio = "1.48.0"
thiserror = "2.0.17"
strum = "0.27.2"
bytes = "1.11.0"
jni = "0.21.1"
ndk-context = "0.1.1"
libc = "0.2.178"
crossbeam-channel = "0.5.15"
