[workspace]
resolver = "3"
members = [
  "apps/nesium-egui",
  "crates/nesium-core",
  "crates/libretro-bridge",
  "crates/nesium-libretro",
  "crates/nesium-flutter",
  "crates/nesium-blip",
  "crates/nesium-icon",
  "crates/nesium-runtime",
  "crates/nesium-wasm",
  "crates/nesium-netplay",
  "crates/nesium-netd",
  "crates/nesium-netproto",
  "crates/nesium-support",
]

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
panic = "abort"
debug = false

# Workaround for rustc crash (0xc000001d) when cross-compiling rand_chacha 0.9.0
# for Android x86_64 on Windows hosts at opt-level 3.
[profile.release.package.rand_chacha]
opt-level = 2

[profile.release-dist]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = "symbols"

[workspace.package]
license = "GPL-3.0-or-later"
description = "Nesium - a cross-platform NES emulator"
repository = "https://github.com/mikai233/nesium"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
libretro-bridge = { path = "crates/libretro-bridge" }
nesium-blip = { path = "crates/nesium-blip" }
nesium-core = { path = "crates/nesium-core" }
nesium-support = { path = "crates/nesium-support" }
nesium-icon = { path = "crates/nesium-icon" }
nesium-runtime = { path = "crates/nesium-runtime" }
nesium-netd = { path = "crates/nesium-netd" }
nesium-netplay = { path = "crates/nesium-netplay" }
nesium-netproto = { path = "crates/nesium-netproto" }

bitflags = "2.10.0"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
ctor = "0.6.3"
dyn-clone = "1.0.20"
eframe = "0.33.3"
flutter_rust_bridge = "=2.11.1"
gilrs = "0.11.1"
once_cell = "1.19"
bindgen = "0.72"
ureq = "3.1.4"
serde = "1.0.228"
postcard = "1.1.3"
anyhow = "1.0.100"
rfd = "0.17.2"
fontdb = "0.23.0"
ttf-parser = "0.25"
cpal = "0.17.1"
ringbuf = "0.4.8"
base64 = "0.22"
quick-xml = "0.39.0"
sha1 = "0.10.6"
skia-safe = "0.91.1"
ico = "0.5.0"
winres = "0.1.12"
png = "0.18.0"
cc = "1.2.53"
proptest = "1.9.0"
clap = "4.5.54"
tokio = "1.49.0"
thiserror = "2.0.17"
strum = "0.27.2"
bytes = "1.11.0"
jni = "0.21.1"
ndk-context = "0.1.1"
libc = "0.2.180"
crossbeam-channel = "0.5.15"
lz4_flex = "0.12.0"
wasm-bindgen = "0.2.106"
console_error_panic_hook = "0.1.7"
mimalloc = "0.1.48"
dashmap = "6.1.0"
hex = "0.4.3"
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-tokio",
  "rustls-ring",
] }
rustls = { version = "0.23.36", default-features = false, features = [
  "std",
  "ring",
  "tls12",
] }
rustls-native-certs = "0.8.3"
ring = "0.17.14"
rcgen = { version = "0.14.6", default-features = false, features = [
  "pem",
  "ring",
] }
parking_lot = "0.12.5"
xbrz-rs = "0.1.0"
librashader = { git = "https://github.com/mikai233/librashader.git", branch = "master", default-features = false }
