[package]
name = "nesium-egui"
version = "0.1.0"
edition = "2024"
license.workspace = true
default-run = "nesium_egui"

[[bin]]
name = "nesium_egui"
path = "src/main.rs"

[package.metadata.bundle]
name = "Nesium"
identifier = "com.mikai233.nesium"
icon = [
    "../../target/generated/nesium.icns",
    "../../target/generated/nesium.ico",
    "../../target/generated/nesium.png",
]
version = "0.1.0"
copyright = "Copyright (c) 2025 mikai233"

[dependencies]
nesium-core.path = "../../crates/nesium-core"
nesium-runtime.path = "../../crates/nesium-runtime"
eframe = { workspace = true, features = ["wgpu", "glow"] }
gilrs.workspace = true
anyhow.workspace = true
rfd.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
nesium-icon = { path = "../../crates/nesium-icon" }
ico = "0.5"
winres = "0.1"
png = "0.18"
