[package]
name = "nesium-egui"
version = "0.2.0"
edition = "2024"
license.workspace = true
default-run = "nesium_egui"

[lints]
workspace = true

[[bin]]
name = "nesium_egui"
path = "src/main.rs"

[package.metadata.bundle]
name = "Nesium"
identifier = "io.github.mikai233.nesium.egui"
icon = [
    "../../target/generated/nesium.icns",
    "../../target/generated/nesium.ico",
    "../../target/generated/nesium.png",
]
version = "0.2.0"
copyright = "Copyright (c) 2025 mikai233"

[dependencies]
nesium-core.workspace = true
nesium-runtime.workspace = true
eframe = { workspace = true, features = ["wgpu"] }
gilrs.workspace = true
anyhow.workspace = true
rfd.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
crossbeam-channel.workspace = true
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
nesium-icon.workspace = true
ico.workspace = true
winres.workspace = true
png.workspace = true
