[package]
name = "nesium-tui"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
nesium-core = { path = "../../crates/nesium-core" }
nesium-runtime = { path = "../../crates/nesium-runtime" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
image = "0.24" # For convenient resizing/color conversion if needed