[package]
name = "libretro-bridge"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Safe Rust bindings and runtime helpers for implementing libretro cores."
readme = "README.md"
build = "build.rs"

[lints]
workspace = true

[dependencies]
once_cell.workspace = true
parking_lot.workspace = true

[build-dependencies]
bindgen.workspace = true
ureq = { workspace = true }
