[package]
name = "nesium-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
boxed-memblock = []

[dependencies]
bitflags.workspace = true
dyn-clone.workspace = true
tracing.workspace = true
nesium-blip = { path = "../nesium-blip" }

[dev-dependencies]
rand.workspace = true
ctor.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell.workspace = true
base64.workspace = true
quick-xml.workspace = true
sha1.workspace = true
