[package]
name = "nesium-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[features]
default = ["cartridge-db"]
boxed-memblock = []
cartridge-db = ["dep:crc32fast", "dep:phf"]
savestate-serde = ["dep:serde"]
savestate-postcard = ["savestate-serde", "dep:postcard"]

[dependencies]
bitflags.workspace = true
dyn-clone.workspace = true
tracing.workspace = true
nesium-blip.workspace = true
crc32fast = { workspace = true, optional = true }
phf = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
postcard = { workspace = true, optional = true, features = ["use-std"] }


[dev-dependencies]
rand.workspace = true
ctor.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell.workspace = true
base64.workspace = true
quick-xml.workspace = true
sha1.workspace = true

[build-dependencies]
cc.workspace = true
phf_codegen.workspace = true
