[package]
name = "nesium-egui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nesium-core.path = "../nesium-core"
egui.workspace = true
eframe.workspace = true
anyhow.workspace = true
rfd.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
cpal.workspace = true
tracing.workspace = true
