[package]
name = "nesium-egui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nesium-core.path = "../nesium-core"
nesium-audio.path = "../nesium-audio"
eframe.workspace = true
gilrs.workspace = true
anyhow.workspace = true
rfd.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
cpal.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
nesium-icon = { path = "../nesium-icon" }
ico = "0.4"
winres = "0.1"
png = "0.17"
