[package]
name = "nesium-flutter"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "nesium_flutter"
crate-type = ["staticlib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
nesium-core.workspace = true
flutter_rust_bridge.workspace = true
anyhow.workspace = true
nesium-runtime.workspace = true
nesium-netplay.workspace = true
nesium-netd.workspace = true
nesium-netproto.workspace = true
nesium-support.workspace = true
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true, features = ["inline"] }
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
serde.workspace = true
postcard.workspace = true
if-addrs = "0.14.0"
stun-rs = "0.1.11"
ureq.workspace = true
easy-upnp = "0.3.0"

# Enable gamepad feature on desktop platforms (not Android, not iOS, not WASM)
[target.'cfg(all(not(target_os = "android"), not(target_os = "ios"), not(target_arch = "wasm32")))'.dependencies]
nesium-support = { workspace = true, features = ["gamepad"] }
gilrs.workspace = true

[target.'cfg(any(target_os = "android", target_os = "windows", target_os = "linux"))'.dependencies]
mimalloc = { workspace = true, optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-context.workspace = true
libc.workspace = true
