[package]
name = "nesium-icon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[features]
default = []
svg = ["skia-safe/svg"]

[dependencies]
skia-safe = { workspace = true, features = ["gl"] }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
