[package]
name = "nesium-netd"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nesium-netproto.workspace = true
tokio = { workspace = true, features = ["full"] }
bytes.workspace = true
anyhow.workspace = true
serde.workspace = true
postcard = { workspace = true, features = ["use-std"] }
tracing.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand.workspace = true
quinn.workspace = true
rustls.workspace = true
ring.workspace = true
rcgen.workspace = true
hex.workspace = true
base64.workspace = true
