[package]
name = "nesium-netplay"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nesium-netproto.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
quinn.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
ring.workspace = true
hex.workspace = true
base64.workspace = true
parking_lot.workspace = true

[dev-dependencies]
nesium-netd = { workspace = true }
