[package]
name = "nesium-netproto"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true, features = ["use-std"] }
strum = { workspace = true, features = ["derive"] }
nesium-netproto-derive = { path = "../nesium-netproto-derive" }
