[package]
name = "nesium-runtime"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
nesium-core = { workspace = true, features = ["savestate-postcard"] }
nesium-support.workspace = true
nesium-netplay = { workspace = true }
anyhow.workspace = true
cpal.workspace = true
sha1.workspace = true
ringbuf.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
lz4_flex.workspace = true
