[package]
name = "nesium-runtime"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
nesium-core = { workspace = true, features = ["savestate-postcard"] }
nesium-support.workspace = true
nesium-netplay = { workspace = true }
anyhow.workspace = true
cpal.workspace = true
sha1.workspace = true
ringbuf.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
lz4_flex.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[target.'cfg(any(target_os = "android", target_os = "macos", target_os = "ios"))'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Media",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
