[package]
name = "nesium-support"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
nesium-core = { workspace = true, features = ["savestate-postcard"] }
lz4_flex.workspace = true
bitflags.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
xbrz-rs.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
proptest.workspace = true

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
gilrs = { workspace = true, optional = true }

[features]
default = []
gamepad = ["gilrs"]
hqx = []
hqx-cpp = []
ntsc = []
sai-cpp = []
lcd-grid-cpp = []
scanline-cpp = []
ntsc-bisqwit = []
