[package]
name = "nesium-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nesium-core = { workspace = true, features = ["savestate-postcard"] }
nesium-rewind.workspace = true
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
sha1.workspace = true
