[package]
name = "nesium-wasm"
version = "0.1.0"
edition = "2024"
license = { workspace = true }
description = "Nesium web runtime (WASM)"
repository = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nesium-core = { workspace = true, features = ["savestate-postcard"] }
nesium-support = { workspace = true }
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
sha1.workspace = true

# Disable wasm-opt to prevent crashes on Windows.
# The performance impact is minimal (file size only) since `opt-level = 3` is already set in the workspace.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
